--- a/views/base.jade
+++ b/views/base.jade
@@ -8,6 +8,20 @@ html(lang="pt-br")
       script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
       script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
       link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+      <!-- Copy and paste here the Client configuration from Developer Console into the config variable -->
+      script(src="//www.gstatic.com/authtoolkit/js/gitkit.js")
+      link(rel="stylesheet", href="//www.gstatic.com/authtoolkit/css/gitkit.css")
+      script
+            var gitkitUserConfig = {
+                "widgetUrl": "http://llm-silvrosa.appspot.com/gitkit",
+                "signInSuccessUrl": "http://llm-silvrosa.appspot.com/gitkit",
+                "signOutUrl": "http://llm-silvrosa.appspot.com/",
+                "oobActionUrl": "http://llm-silvrosa.appspot.com/send",
+                "apiKey": "",
+                "siteName": "this site",
+                "signInOptions": ["password","microsoft","google","facebook","twitter"]
+            };
+            window.google.identitytoolkit.start('#gitkitWidgetDiv',gitkitUserConfig,decodeURIComponent('%%postBody%%'));
   body
     header
     nav
@@ -22,7 +36,8 @@ html(lang="pt-br")
           p.navbar-text.navbar-right
             | Acesse o sistema 
             a(href="http://www.silveirarosa.com") [Advocacia Silveira Rosa]
-            | .
+            | .&nbsp;
+            #gitkitWidgetDiv
 
     main
       #wrap(style="min-height: 100%;height: auto !important;height: 100%;margin: 0 auto 60px;}")
