passport partial views jade templates

--- a/views/base.jade
+++ b/views/base.jade
@@ -5,13 +5,10 @@ html(lang="pt-br")
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     block scripts
-      script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
-      script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
-      link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
-      <!-- Copy and paste here the Client configuration from Developer Console into the config variable -->
-      script(src="//www.gstatic.com/authtoolkit/js/gitkit.js")
-      link(rel="stylesheet", href="//www.gstatic.com/authtoolkit/css/gitkit.css")
-      script var gitkitUserConfig = {              "widgetUrl": "http://llm-silvrosa.appspot.com/gitkit",                "signInSuccessUrl": "http://llm-silvrosa.appspot.com/gitkit",                "signOutUrl": "http://llm-silvrosa.appspot.com/",                "oobActionUrl": "http://llm-silvrosa.appspot.com/send",                "apiKey": "",                "siteName": "this site",                "signInOptions": ["password","microsoft","google","facebook","twitter"]            };            window.google.identitytoolkit.start('#gitkitWidgetDiv',gitkitUserConfig,decodeURIComponent('%%postBody%%'));
+        script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
+        script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+        link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+        link(rel="stylesheet", href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
   body
     header
     nav
