--- a/views/connect-local.jade
+++ b/views/connect-local.jade
@@ -3,22 +3,19 @@ extends ./base.jade
 block content
 	.col-sm-6.col-sm-offset-3
 		h1
-			span.fa.fa-sign-in
-			| &nbsp;Login
-		if (message.length > 0)
+			span.fa.fa-user
+			| &nbsp;Adicionar conta local
+		if message.length
 			div.alert.alert-danger #{message}
-		form(action="/login", method="post")
+		form(action="/connect/local", method="post")
 			div.form-group
 				label.form-control-label(for="email") Email
 				input.form-control(type="text", name="email",id="email")
 			div.form-group
 				label.form-control-label(for="password") Senha
 				input.form-control(type="password", name="password",id="password")
-			button.btn.btn-warning.btn-lg(type="submit") Login
+			button.btn.btn-warning.btn-lg(type="submit") Adicionar conta
 		hr
-		p Não tem uma conta ainda?
-			a(href="/inscrever") Inscreva-se
-			| .
-		p Ou então volte para a 
-			a(href="/") Página de entrada
+		p Voltar para o seu
+			a(href="/perfil") Perfil
 			| .
