--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,7 @@ block content
 		h1
 			span.fa.fa-sign-in
 			| &nbsp;Login
-		if (message.length > 0)
+		if (message!=0)
 			div.alert.alert-danger #{message}
 		form(action="/login", method="post")
 			div.form-group
