--- a/views/base.jade
+++ b/views/base.jade
@@ -1,12 +1,15 @@
 doctype html
-html(lang="pt-br")
+html(lang="pt-br", ng-app="ngLLM")
 	head
 		title [LLM] Legal Lawyer Manager [Node.js base]
 		meta(charset='utf-8')
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
+		base(href="http://localhost:8080")
 		block scripts
 				script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
+				script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.min.js")
+				script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js")
 				script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
 				script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
 				link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
@@ -67,8 +70,8 @@ html(lang="pt-br")
 					p 2016 © Advocacia Silveira Rosa. Todos os direitos reservados.
 					p Desenvolvido por Renato Rosa e Alpha Sagittarii Empreendimentos e Participações, em Barueri/SP.
 					script
-						| $(function(
+						| $(function(){
 						block footer-jquery
-						| ))
+						| })
 						
 		
