--- a/views/base.jade
+++ b/views/base.jade
@@ -5,7 +5,7 @@ html(lang="pt-br", ng-app="ngLLM")
 		meta(charset='utf-8')
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
-		base(href="http://llm-silvrosa.appspot.com")
+		base(href="")
 		block scripts
 				- //script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
 				- //script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.min.js")
@@ -66,5 +66,6 @@ html(lang="pt-br", ng-app="ngLLM")
 						| $(function(){
 						block footer-jquery
 						| })
+					block footer
 						
 		
