--- a/views/processos/list.jade
+++ b/views/processos/list.jade
@@ -1,89 +1,127 @@
 extends ../base.jade
 
+append scripts
+	script(src="/js/processos.js")
+
 block content
-  h3 Processos
+	h3 Processos
+	.form-group.row
+		.col-sm-2
+			a(href="/processos/novo", class='btn btn-success btn-sm')
+				i.glyphicon.glyphicon-plus
+				span Novo processo
+		.col-md-offset-2
+			button.btn.btn-primary.col-sm-4.col-md-8(type="button", data-toggle="collapse", data-target="#wellFiltros") Selecione os filtros desejados
+	.collapse.well#wellFiltros
+		form#filtro
+			.form-group.row
+				label.form-control-label.col-sm-2(for="numero") Número do processo:
+				.col-sm-10
+					input.form-control(type="text", name="numero", id="numero", placeholder="Digite parte do número do processo...")
+			.form-group.row
+				label.form-control-label.col-sm-2(for="numero") Acompanhamento:
+				.col-sm-10
+					select.form-control(name="acomp", id="acomp")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="link") Link de acompanhamento:
+				.col-sm-10
+					input.form-control(type="text", name="link", id="link", disabled="disabled", placeholder="Carregando filtros...")
+			.form-group.row
+				label.form-control-label.col-sm-2(for="cliente") Cliente:
+				.col-sm-10
+					select.form-control(name="cliente", id="cliente")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="parteCliente") Parte cliente:
+				.col-sm-10
+					input.form-control(type="text", name="parteCliente", id="parteCliente", disabled="disabled", placeholder="Carregando filtros...")
+			.form-group.row
+				label.form-control-label.col-sm-2(for="parteContraria") Parte contrária:
+				.col-sm-10
+					input.form-control(type="text", name="parteContraria", id="parteContraria", disabled="disabled", placeholder="Carregando filtros...")
+			.form-group.row
+				label.form-control-label.col-sm-2(for="advogado") Advogado:
+				.col-sm-2
+					select.form-control(name="advogado", id="advogado", size="6", multiple="multiple")
+						option(disabled="disabled") Carregando filtros...
+				.col-sm-2
+					p.form-control-text (Seleção múltipla. Segura ctrl ou command para selecionar mais de um)
+			.form-group.row
+				label.form-control-label.col-sm-2(for="responsavel") Responsável&#58;
+				.col-sm-2
+					select.form-control(name="responsavel", id="responsavel", size="6", multiple="multiple")
+						option(disabled="disabled") Carregando filtros...
+				.col-sm-2
+					p.form-control-text (Seleção múltipla. Segura ctrl ou command para selecionar mais de um)
+			hr
+			.form-group.row
+				h3 Escolha Estado (UF), Instância, Comarca e Vara (nessa ordem):
+				label.form-control-label.col-sm-2(for="estado") Estado (UF):
+				.col-sm-2
+					select.form-control.col-sm-2(name="estado", id="estado")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="comarca") Comarca:
+				.col-sm-2
+					select.form-control(name="comarca", id="comarca", disabled="disabled")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="instancia") Instância:
+				.col-sm-2
+					select.form-control(name="instancia", id="instancia")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="numVara") Vara:
+				.col-sm-2
+					select.form-control(name="numVara", id="numVara")
+						option(disabled="disabled") Carregando filtros...
+				.col-sm-2
+					select.form-control(name="natVara", id="natVara")
+						option(disabled="disabled") Carregando filtros...
+			hr
+			.form-group.row
+				label.form-control-label.col-sm-2(for="fase") Fase
+				.col-sm-2
+					select.form-control(name="fase", id="fase")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="status") Status atual
+				.col-sm-2
+					select.form-control(name="status", id="status")
+						option(disabled="disabled") Carregando filtros...
+			.form-group.row
+				label.form-control-label.col-sm-2(for="observacoes") Observações
+				.col-sm-10
+					input.form-control(type="text", name="observacoes", id="observacoes",disabled="disabled", placeholder="Carregando filtros...")
+			.form-group
+				.col-sm-offset-2
+					button.btn.btn-success.col-sm-2(disabled="disabled") Filtrar!
+			br
+	.table-responsive
+		table.table.table-striped.table-condensed(border='1')
+			thead
+				tr
+					th Acompanhamento (link)
+					th Processo n.º (clique para editar)
+					th Cliente
+					th Parte Cliente
+					th Parte Contrária
+					th Adv.
+					th Resp.
+					th Foro
+					th Vara
+					th Fase
+					th Observações
+			tbody#tabelaProcessos
+				tr
+					td Carregando...
 
-  .form-group.row
-    .col-sm-2
-      a(href="/processos/novo", class='btn btn-success btn-sm')
-        i.glyphicon.glyphicon-plus
-        span  Novo processo
-    .col-sm-offset-8
-      p.form-group-text Resultados por página&#58;&nbsp;
-        a(href="?perPage=10") 10
-        | &nbsp;&verbar;&nbsp;
-        a(href="?perPage=20") 20
-        | &nbsp;&verbar;&nbsp;
-        a(href="?perPage=50") 50
-        | &nbsp;&verbar;&nbsp;
-        a(href="?perPage=100") 100
-        | &nbsp;&verbar;&nbsp;
-        a(href="?perPage=200") 200
-        | &nbsp;&verbar;&nbsp;
-        a(href="?perPage=500") 500
-        | &nbsp;&verbar;&nbsp;
-        a(href="?perPage=1000") 1000
-
-  .table-responsive
-    table.table.table-striped.table-condensed(border='1')
-      thead
-        tr
-          th #
-          th Acompanhamento (link)
-          th Processo n.º (clique para editar)
-          th Cliente
-          th Parte Cliente
-          th Parte Contrária
-          th Adv.
-          th Resp.
-          th Foro
-          th Vara
-          th Fase
-          th Observações
-      tbody
-        each processo, i in processos
-            tr
-              td 
-                span
-                  #{i+nextPageToken+1-processos.length}
-              td
-                | #{processo.acomp}
-                if processo.link
-                  | &nbsp;(
-                  a(href="#{processo.link}", target="_blank") Abrir link
-                  | )
-              if(!processo.numero)
-                td
-                  a(href="/processos/#{processo.id}") Abrir/Editar
-              td 
-                a(href="/processos/#{processo.id}") #{processo.numero}
-              td= processo.cliente
-              td= processo.parteCliente
-              td= processo.parteContraria
-              td= processo.advogado
-              td= processo.responsavel
-              td
-                | #{processo.comarca}
-                | /
-                | #{processo.estado}
-                | &nbsp;(
-                | #{processo.instancia}
-                | )
-              td
-                | #{processo.numVara}
-                | &nbsp;
-                | #{processo.natVara}
-              td
-                | #{processo.fase}
-                | /
-                | #{processo.status}
-              td= processo.observacoes
-                
-  if !processos.length
-    p Nenhum processo encontrado.
-
-  if nextPageToken
-    nav
-      ul.pager
-        li
-          a(href="?pageToken=#{encodeURIComponent(nextPageToken)}&perPage=#{encodeURIComponent(perPage)}") Mais
+	if nextPageToken
+		nav
+			ul.pager
+				li
+					a(href="?pageToken=#{encodeURIComponent(nextPageToken)}&perPage=#{encodeURIComponent(perPage)}") Mais
+append footer-jquery
+	| carregarTabela();
+	| carregarFiltros();
