updated to 1.1, with AJAX list views and filters and added crudEasy as unique crud and api router

--- a/views/base.jade
+++ b/views/base.jade
@@ -43,9 +43,9 @@ html(lang="pt-br", ng-app="ngLLM")
 									span.glyphicon.glyphicon-briefcase
 									| &nbsp;Clientes
 							li
-								a(href="/partes")
+								a(href="/pessoas")
 									span.glyphicon.glyphicon-pencil
-									| &nbsp;Partes
+									| &nbsp;Pessoas
 							li
 								a(href="/usuarios")
 									span.fa.fa-users
