general house cleaning for npm publishing. modules loaded locally. See server.js

--- a/views/base.jade
+++ b/views/base.jade
@@ -32,36 +32,37 @@ html(lang="pt-br", ng-app="ngLLM")
 							| &nbsp;[LLM] Legal Lawyer Manager
 					.collapse.navbar-collapse#main-navbar
 						ul.nav.navbar-nav.navbar-right
-							li
-								a(href="/perfil")
-									span.glyphicon.glyphicon-home
-							li
-								a(href="/processos")
-									span.glyphicon.glyphicon-th-list
-									| &nbsp;Processos
-							li
-								a(href="/clientes")
-									span.glyphicon.glyphicon-briefcase
-									| &nbsp;Clientes
-							li
-								a(href="/pessoas")
-									span.glyphicon.glyphicon-pencil
-									| &nbsp;Pessoas
-							li
-								a(href="/usuarios")
-									span.fa.fa-users
-									| &nbsp;Usuários
-							li
-								a(href="/categorias")
-									span.glyphicon.glyphicon-cog
-									| &nbsp;Categorias
+							block links
+								li
+									a(href="/perfil")
+										span.glyphicon.glyphicon-home
+								li
+									a(href="/processos")
+										span.glyphicon.glyphicon-th-list
+										| &nbsp;Processos
+								li
+									a(href="/clientes")
+										span.glyphicon.glyphicon-briefcase
+										| &nbsp;Clientes
+								li
+									a(href="/pessoas")
+										span.glyphicon.glyphicon-pencil
+										| &nbsp;Pessoas
+								li
+									a(href="/usuarios")
+										span.fa.fa-users
+										| &nbsp;Usuários
+								li
+									a(href="/categorias")
+										span.glyphicon.glyphicon-cog
+										| &nbsp;Categorias
 		main
 			#wrap(style="min-height: 100%;height: auto !important;height: 100%;margin: 0 auto 60px;}")
 				.container#wrap
 					block content
 		footer.container-fluid.text-center
 			#footer.container.well
-					p 2016 © Advocacia Silveira Rosa. Todos os direitos reservados.
+					p 2016 &copy; Advocacia Silveira Rosa. Todos os direitos reservados.
 					p Desenvolvido por Renato Rosa e Alpha Sagittarii Empreendimentos e Participações, em Barueri/SP.
 					script
 						| $(function(){
