--- a/views/base.jade
+++ b/views/base.jade
@@ -1,3 +1,5 @@
+include mixins.jade
+
 doctype html
 html(lang="pt-br", ng-app="ngLLM")
 	head
@@ -69,5 +71,4 @@ html(lang="pt-br", ng-app="ngLLM")
 						block footer-jquery
 						| })
 					block footer
-						
 		
